# ZeldaOOL

./: .clang  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.windows  Notes  README.md  README.textile  ZeldaOOT.rewrite  draft.cpp  draft2.cpp  merge_out  tags
data/config/: audio.xml  doors.xml  items.xml  keys.xml  maps.xml  resources.xml  textures.xml  tilesets.xml
data/maps/: a1.tmx  a2.tmx  b1.tmx  b2.tmx  ca1a1.tmx  ca2a1.tmx  in1.tmx
data/tilesets/: indoor.xml  plain.xml  underground.xml
doxygen/: doxygen.cfg
graphics/tilesets/: plain.tmx
include/applicationStates/: ApplicationState.hpp  AudioTestState.hpp  ChestOpenedState.hpp  ChestOpeningState.hpp  DialogState.hpp  DisplayTestState.hpp  GamePadTestState.hpp  MainState.hpp  MapState.hpp  MenuState.hpp  MessageBoxState.hpp  OpenGLTestState.hpp  TransitionState.hpp
include/audio/: AudioPlayer.hpp  BackgroundMusic.hpp  Sound.hpp  SoundEffect.hpp
include/characterStates/: AbstractCharacterState.hpp  CharacterState.hpp  CharacterStateManager.hpp
include/characters/: Battler.hpp  Character.hpp  NPC.hpp  Player.hpp
include/collectables/: Collectable.hpp  HeartCollectable.hpp  RupeeCollectable.hpp
include/core/: Application.hpp  ApplicationStateStack.hpp  ApplicationWindow.hpp  Color.hpp  Config.hpp  CoreApplication.hpp  Debug.hpp  Direction.hpp  EventHandler.hpp  GLRenderer.hpp  GameState.hpp  GameStateStack.hpp  GameWindow.hpp  IntTypes.hpp  Keyboard.hpp  Rect.hpp  Rect.inl  Renderer.hpp  ResourceHandler.hpp  ResourceHandler.inl  SDLHeaders.hpp  SDLLoader.hpp  SDLManager.hpp  Sound.hpp  TimeManager.hpp  Timer.hpp  Translator.hpp  Types.hpp  Vector2.hpp  View.hpp  Window.hpp  XMLFile.hpp  XMLTileMap.hpp
include/data/: TilesData.hpp  TilesetsData.hpp
include/display/: AnimatedMap.hpp  AnimatedTile.hpp  Drawable.hpp  Font.hpp  Image.hpp  Map.hpp  Rectangle.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  Scene.hpp  Sprite.hpp  SpriteAnimation.hpp  TileAnimation.hpp  TileMap.hpp  Tileset.hpp  Transformable.hpp  Vertex.hpp
include/enemies/: Enemy.hpp  Octorok.hpp
include/entities/: Battler.hpp  Character.hpp  Entity.hpp  Player.hpp
include/game/: Scene.hpp  SceneObject.hpp  World.hpp
include/gl/: Camera.hpp  Chunk.hpp  GLUtilities.hpp  OpenGL.hpp  Shader.hpp  Texture.hpp  TileMap.hpp  Vector2.hpp  Vertex.hpp  VertexArray.hpp  VertexAttribute.hpp  VertexBuffer.hpp  World.hpp
include/helpers/: MapHelper.hpp
include/input/: GameKey.hpp  GamePad.hpp  InputHandler.hpp  KeyboardHandler.hpp
include/interface/: Dialog.hpp  Font.hpp  Inventory.hpp  Menu.hpp  MessageBox.hpp  StatsBar.hpp  Text.hpp  TextBox.hpp
include/managers/: AnimationManager.hpp  CharacterManager.hpp  CharacterStateManager.hpp  DoorManager.hpp  EffectManager.hpp  GameStateManager.hpp  IconManager.hpp  MapEventManager.hpp  MapManager.hpp  ShaderManager.hpp  WeaponManager.hpp
include/mapObjects/: ButtonObject.hpp  ChestObject.hpp  DoorObject.hpp  GrassObject.hpp  MapObject.hpp  Movable.hpp  Player.hpp
include/movements/: CollectableMovement.hpp  GamePadMovement.hpp  HurtMovement.hpp  KeyboardMovement.hpp  Movement.hpp  OctorokMovement.hpp
include/objects/: ButtonObject.hpp  Chest.hpp  ChestObject.hpp  Door.hpp  DoorObject.hpp  GrassObject.hpp  Object.hpp
include/player/: BattlerState.hpp  CharacterState.hpp  CharacterState.inl  HurtState.hpp  ICharacterState.hpp  Inventory.hpp  MovingState.hpp  PlayerState.hpp  PushingState.hpp  StandingState.hpp  SwordState.hpp
include/playerStates/: HurtState.hpp  MovingState.hpp  PlayerState.hpp  PushingState.hpp  StandingState.hpp  SwordState.hpp
include/resource/: AudioLoader.hpp  DoorLoader.hpp  ItemLoader.hpp  MapLoader.hpp  ResourceHandler.hpp  ResourceLoader.hpp  SpriteLoader.hpp  TextureLoader.hpp  TileMapLoader.hpp  TilesetLoader.hpp
include/scene/: Scene.hpp  SceneObject.hpp  SceneObjectList.hpp
include/states/: ApplicationState.hpp  ChestOpenedState.hpp  ChestOpeningState.hpp  DialogState.hpp  GameState.hpp  MapState.hpp  MenuState.hpp  MessageBoxState.hpp  State.hpp  StateManager.hpp  TestState.hpp  TransitionState.hpp
include/system/: DrawingSystem.hpp  Exception.hpp  Filesystem.hpp  GameClock.hpp  Timer.hpp  Types.hpp
include/transitions/: DoorTransition.hpp  ScrollingTransition.hpp  TeleporterTransition.hpp  Transition.hpp
include/utils/: PropertyHolder.hpp
include/weapons/: Sword.hpp  Weapon.hpp
include/xml/: XMLFile.hpp
maps/: a1.map
misc/: header_cpp.txt  update_headers.sh
resources/config/: audio.xml  keys.xml  maps.xml  sprites.xml  textures.xml  tilemaps.xml  tilesets.xml
resources/locale/: fr_FR.xml
resources/maps/: a1.tmx  a2.tmx  b1.tmx  b2.tmx  c1.tmx  ca1a1.tmx  ca1a2.tmx  ca1b1.tmx  in1.tmx  overworld.world
resources/shaders/: game.f.glsl  game.v.glsl
shaders/: default.f.glsl  default.v.glsl  font.f.glsl  font.v.glsl  game.f.glsl  game.v.glsl  map.f.glsl  map.v.glsl  rectangle.f.glsl  rectangle.v.glsl  view.f.glsl  view.v.glsl
source/: main.cpp
source/applicationStates/: AudioTestState.cpp  ChestOpenedState.cpp  ChestOpeningState.cpp  DialogState.cpp  DisplayTestState.cpp  GamePadTestState.cpp  MainState.cpp  MapState.cpp  MenuState.cpp  MessageBoxState.cpp  OpenGLTestState.cpp  TransitionState.cpp
source/audio/: AudioPlayer.cpp  BackgroundMusic.cpp  Sound.cpp  SoundEffect.cpp
source/characterStates/: CharacterStateManager.cpp
source/characters/: Battler.cpp  Character.cpp  NPC.cpp  Player.cpp
source/collectables/: Collectable.cpp  HeartCollectable.cpp  RupeeCollectable.cpp
source/core/: Application.cpp  Application.hpp  ApplicationStateStack.cpp  ApplicationWindow.cpp  Color.cpp  Color.hpp  Config.hpp  CoreApplication.cpp  Direction.hpp  EventHandler.cpp  GLRenderer.cpp  GameClock.cpp  GameKey.hpp  GameState.cpp  GameStateStack.cpp  GameWindow.cpp  Keyboard.cpp  ResourceHandler.cpp  SDLLoader.cpp  SDLManager.cpp  Sound.cpp  TimeManager.cpp  Timer.cpp  (+6 more)
tests/: InventoryComponentTests.hpp  SceneObjectTest.hpp  SceneObjectTests.hpp  TranslatorTests.hpp  Vector2Tests.hpp
(+539 files in other folders)
